# oro-filesystem

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: config.rs  extra.rs  lib.rs  main.rs  packager.rs  readers.rs
src/config/: assetmap.rs  index.rs  index_errors.rs  secure_path.rs
src/readers/: assetpackage.rs  aura.rs  filesystem.rs
tests/: testfile.txt
tests/assetpackage/: indices.oapi  indices.oroi  package.oap
tests/aura/: webmod.oroi
tests/errors/: duplicate_paths.oroi  negative_filesize.oroi  negative_index.oroi
