[package]
name = "oro-filesystem"
version = "0.0.1"
authors = ["A31Nesta"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Black-Observer/obstruction-filesystem"
description = """
Read-Only Filesystem options for Obstruction.
"""
edition = "2021"

[dependencies]
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
